Alert system implemented. Unit tests started.

--- a/StorageControl.app/StorageControl/StorageControl.Web/StorageControl.Web.csproj
+++ b/StorageControl.app/StorageControl/StorageControl.Web/StorageControl.Web.csproj
@@ -146,12 +146,15 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
+    <Compile Include="Controllers\Base\BaseController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\InstrumentsController.cs" />
     <Compile Include="Controllers\InstrumentTypesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Alert.cs" />
+    <Compile Include="Helpers\ValidationHelper.cs" />
     <Compile Include="Models\Categories\CategoriesCreateModel.cs" />
     <Compile Include="Models\Categories\CategoriesDeleteModel.cs" />
     <Compile Include="Models\Categories\CategoriesEditModel.cs" />
@@ -212,6 +215,7 @@
     <Content Include="Views\Instruments\Create.cshtml" />
     <Content Include="Views\Instruments\Edit.cshtml" />
     <Content Include="Views\Instruments\Delete.cshtml" />
+    <Content Include="Views\Shared\_Alerts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
