--- a/StorageControl.app/StorageControl/StorageControl.DataAccess/StorageControl.DataAccess.csproj
+++ b/StorageControl.app/StorageControl/StorageControl.DataAccess/StorageControl.DataAccess.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\ParameterBuilder.cs" />
+    <Compile Include="Factories\ConnectionFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Abstractions\Repository.cs" />
     <Compile Include="Repositories\CategoriesRepository.cs" />
